--- a/style.css
+++ b/style.css
@@ -82,14 +82,50 @@
 }
 .section
 {
-    margin-top: 10px;
+    margin-top: 12px;
+    width: 100%;
 }
 .section_left
 {
+    display: flex;
+    justify-content: space-between;
     background: rgb(235, 235, 235);
+    width: 75%;
+    min-height: 350px;
 }
 .section_left .img
 {
-    width: 10%;
-    height: 10%;
+    width: 48%;
+}
+.section_left .img img
+{
+    width: 100%;
+    height: 100%;
+}
+.section_left .text i
+{
+    float: left;
+    opacity: 0.5;
+}
+#p1
+{
+    opacity: 0.5;
+    margin-left: 17px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.section_left .text
+{
+    width: 48%;
+    padding: 20px 30px;
+}
+.section_left .text h2
+{
+    font-family: sans-serif;
+    margin-top: 12px;
+}
+.section_left .text #p2
+{
+    margin-top: 20px;
+    line-height: 25px;
+    font-size: 17px;
 }
