--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 }
 .container
 {
-    width: 96%;
+    width: 1315px;
     margin: 1% auto;
 }
 
+/* header qism */
 .header
 {
     display: flex;
@@ -55,6 +56,8 @@
     border-radius: 50%;
     color: rgb(175, 175, 175);
 }
+
+/* navbar qism */
 .navbar
 {
     display: flex;
@@ -80,6 +83,8 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+
+/* section qism */
 .section
 {
     margin-top: 13px;
@@ -100,7 +105,7 @@
 }
 .top .img
 {
-    width: 48%;
+    width: 53%;
 }
 .top .img img
 {
@@ -116,11 +121,12 @@
 {
     opacity: 0.5;
     margin-left: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: sans-serif;
+    font-size: 13px;
 }
 .top .text
 {
-    width: 48%;
+    width: 47%;
     padding: 20px 30px;
 }
 .top .text h2
@@ -151,4 +157,89 @@
 hr
 {
     margin: 17px 0;
+}
+input[type="text"]
+{   
+    padding: 3px;
+    outline: none;
+    font-size: 15px;
+    display: block;
+}
+input[type="text"]:focus
+{
+    border: 1px solid red;
+    border-radius: 5px;
+}
+input[type="submit"]
+{
+    background: green;
+    color: white;
+    width: 100%;
+    margin-top: 3px;
+    padding: 2px;
+    border: none;
+    cursor: pointer;
+    /* clip-path: circle(); */
+}
+.bottom
+{
+    margin: 25px 0;
+}
+.top_bottom
+{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.left1
+{
+    display: flex;
+    justify-content: space-between;
+    width: 49%;
+}
+.left1 .img1
+{
+    width: 40%;
+}
+.left1 .img1 img
+{
+    width: 100%;
+}
+.left1 .text1
+{
+    width: 60%;
+    padding: 0 12px;
+}
+.p_text
+{
+    font-family: sans-serif;
+    line-height: 23px;
+    margin-top: 10px;
+    margin-bottom: 28px;
+}
+.right1
+{
+    display: flex;
+    justify-content: space-between;
+    width: 49%;
+}
+.right1 .img1
+{
+    width: 40%;
+}
+.right1 .img1 img
+{
+    width: 100%;
+}
+.right1 .text1
+{
+    width: 60%;
+    padding: 0 12px;
+}
+.bottom_bottom
+{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 10px;
 }
